tests/NormalTests/paczka2/big_fuzzy/52684674.err
Error in line 2: A5OfRaPc S222 88,7
Error in line 19: 1Ii3;n A131 79,8
Error in line 20: f4nuz6X S744 8,9
Error in line 24: 1Ii3Wn A131 242,6
Error in line 26: 1Ii3Wn A840 23,8
Error in line 35: f4nuz6X S222 z7,7
Error in line 27: 1Ii3Wn S744 18,7
Error in line 42: cvOQT S7 17,6
Error in line 44: LMZqJ6y A131 25,1
Error in line 47: LMZqJ6y A840 19,0
Error in line 49: A5OfRaPc S222 38,6
Error in line 40: f4nuz6X S222 34,5
Error in line 60: A5OfRaPc A131 15,9
Error in line 66: qk2eGSxg S744 51,2
Error in line 71: A5OfRaPc A840 -1,9
Error in line 72: S222 S744 14,5
Error in line 78: 1Ii3Wn S222 46,|
Error in line 73: S222 A840 9,6
Error in line 67: A5OfRaPc A840 2,2
Error in line 81: S222 S222 97,2
Error in line 88: f4nuz6X S222 0,5
Error in line 87: qk2eGSxg A131 208,0
Error in line 93: A5OfRaPc A131 20,4
Error in line 80: 1Ii3Wn S222 41,9
Error in line 102: A5OfRaPc S222 218,7
Error in line 114: S222 S222 88,0
Error in line 118: cvOQT S222 69,8
Error in line 126: qk2eGSxg S744 177,31
Error in line 130: A5OfRaPc S222 54,3
Error in line 122: 1Ii3Wn S222 82,3
Error in line 134: f4nuz6X A840 32,2
Error in line 123: cvOQT S744 63,8
Error in line 139: 1Ii3Wn A840 62,3
Error in line 150: 1Ii3Wn S222 11,1
Error in line 154: qk2eGSxg A131 40,7
Error in line 171: A5OfRaPc A840 10,3
Error in line 162: 1Ii3Wn S222 92,9
Error in line 184: A5OfRaPc A131 123,8
Error in line 191: A5OfRaPc S222 45,7
Error in line 192: qk2eGSxg S744 5,4
Error in line 199: f4nuz6X S744 41,5
Error in line 206: A5OfRaPc S222 55,9
Error in line 193: S222 A131 49,0
Error in line 213: cvOQT S744 24,5
Error in line 217: S222 A840 29,5
Error in line 214: 1Ii3Wn S222 12,8
Error in line 242: LMZqJ6y S744 62,2
